# YbMag

./: .gitignore  ELL6_rotary_motor.py  PLAN_digilent_dialog.md  PLAN_digilent_driver.md  README.md  analyze_csv.py  analyze_pixels.py  camera.py  digilent.py  ell_motor.py  export_pixels_widget.py  gen_roi_icons.py  main.py  pyproject.toml  requirements.txt  util.py
.github/: copilot-instructions.md
analysis/: analyze_csv.py  analyze_pixels.py  export_pixels_widget.py
app/: README.md  app.py  dc_power.py  demoapp.py  dialogs.py  display_roi.py  displaywindow.py  hdr.py  mainwindow.py  requirements.txt  resourceselector.py
app/dialogs/: __init__.py  camera_property_dialog.py  camera_selection_dialog.py  camera_settings_dialog.py  device_selection_dialog.py  digilent_dialog.py  display.py  hdr_dialog.py  power_supply_dialog.py  property_dialog.py  rotary_motor.py  save_settings_dialog.py  settings_dialog.py
app/dialogs/controls/: __init__.py  basic_slider.py  binningdecimation.py  engineering_slider.py  property_controls.py  property_info_box.py  property_tree_model.py  (+2 more)
app/resources/: resourceselector.py  settings.json  style_manager.py
app/settings/: codecconfig.json  device.json  settings.json
devices/: camera.py  digilent.py  ell_motor.py  hp6653a.py  power_supply_manager.py  rigol_dp832a.py
digilent_DIO_edges/1kHz1us/: Tek000.csv  Tek001.csv  Tek002.csv  Tek003.csv
old/: digilent.py
planning/: ANALYSIS_property_tree_issues.md  PLAN_dc_power.md  PLAN_digilent_dialog.md  ROI_RENDERING_CONTEXT.md  gen_icons.py
simulation/: ATSolver.py
(+12 files in other folders)
