[project]
name = "control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cffi==2.0.0",
    "clr-loader==0.2.10",
    "imagingcontrol4==1.4.0.3240",
    "imagingcontrol4pyside6==6.10.0.106",
    "numpy==2.4.2",
    "opencv-python==4.13.0.92",
    "packaging==25.0",
    "pip==26.0.1",
    "pycparser==3.0",
    "pyqt6==6.10.2",
    "pyqt6-qt6==6.10.2",
    "pyqt6-sip==13.11.0",
    "pyside6==6.10.2",
    "pyside6-addons==6.10.2",
    "pyside6-essentials==6.10.2",
    "pythonnet==3.0.5",
    "qutip==5.2.3",
    "scipy==1.16.3",
    "setuptools==80.10.2",
    "shiboken6==6.10.2",
    "wheel==0.46.3",
]
